[package]
name = "rover-rev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blowfish = "0.9.1"
log = "0.4.20"
openh264 = "0.4.2"
sdl2 = { version = "0.35.2" }
simple_logger = "4.2.0"
